# solana-voting-app

./: Anchor.toml  README.md  next.config.mjs  package.json  postcss.config.mjs  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
.next/: app-build-manifest.json  trace
.next/cache/: .rscinfo
.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.next/server/app/: page.js  page_client-reference-manifest.js
.next/static/chunks/: [root-of-the-server]__33bd1d78._.css  [root-of-the-server]__33bd1d78._.css.map  [root-of-the-server]__527cd323._.js  [root-of-the-server]__527cd323._.js.map  [root-of-the-server]__77c95329._.css  [root-of-the-server]__77c95329._.css.map  [root-of-the-server]__ec07ee34._.js  [root-of-the-server]__ec07ee34._.js.map  _2c8a2291._.js  _2c8a2291._.js.map  _de908ec9._.js  _de908ec9._.js.map  app_0fcf0d98._.js  app_0fcf0d98._.js.map  app_32f64f95._.js  app_32f64f95._.js.map  app_4245064a._.js  app_4245064a._.js.map  app_components_WalletContextProvider_tsx_9cfd14e6._.js  (+49 more)
app/: globals.css  layout.tsx  page.tsx
app/components/: AddCandidateForm.tsx  CandidateList.tsx  ClientWalletProvider.tsx  CreatePollForm.tsx  PollCard.tsx  PollTimingDebugger.tsx  WalletContextProvider.tsx
app/hooks/: useVotingProgram.ts
app/idl/: solana_voting_app.json
app/models/: types.ts
app/types/: solana_voting_app.ts
app/utils/: constants.ts  pdas.ts
programs/solana-voting-app/: Cargo.toml
programs/solana-voting-app/src/: lib.rs
tests/: create-poll.ts  solana-voting-app.ts
(+78 files in other folders)
